// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliases are parseable: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "elements": [],
                  "source": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                },
              ],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`all top-level elements are in the root namespace: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Documentation",
          "about": [],
          "body": "/* root doc */",
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "C",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "DataType",
          "children": [],
          "declaredName": "D",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Feature",
          "children": [],
          "declaredName": "f",
          "heritage": [
            {
              "$type": "FeatureTyping",
              "elements": [],
              "targetRef": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "C",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Package",
          "children": [],
          "declaredName": "P",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespace elements can have visibility: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "C",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "visibility": "public",
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "DataType",
                "children": [],
                "declaredName": "D",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "visibility": "private",
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "f",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "C",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "visibility": "protected",
            },
          ],
          "declaredName": "N",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespaces are parseable: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [],
          "declaredName": "N1",
          "declaredShortName": "'1.1'",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Documentation",
                "about": [],
                "body": "/* This is an example of a namespace body. */",
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "C",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "DataType",
                "children": [],
                "declaredName": "D",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "f",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "C",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Namespace",
                "children": [],
                "declaredName": "N3",
                "prefixes": [],
              },
            },
          ],
          "declaredName": "N2",
          "declaredShortName": "'1.2'",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespaces can have comments: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [
                  {
                    "$type": "Annotation",
                    "elements": [],
                    "targetRef": {
                      "$type": "ElementReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "body": "/* comment about A */",
                "declaredName": "Comment1",
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment about N9 */",
                "declaredName": "Comment2",
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* also comment about N9 */",
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Documentation",
                "about": [],
                "body": "/* doc about N9 */",
                "declaredName": "N9_Doc",
              },
            },
          ],
          "declaredName": "N9",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;
